# parsdantic

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  setup.py
pydantizater/: pydantizater.py
pydantizater/tests/: test_list.py  test_nesting.py
pydantizater/types/: types.py
src/: parsdantic.py
src/parsdantic/: parser.py  pydantizater.py
src/tests/: test_enum.py  test_list.py  test_nesting.py
