[project]
name = "pydantizater"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonref>=1.1.0",
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
    "setuptools>=75.8.0",
    "twine>=6.1.0",
    "wheel>=0.45.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
